 - QNetworkCookie: allow spaces in unquoted values [QTBUG-18876]
 - HTTP API: add support for HTTP multipart messages [QTBUG-6222]
 - HTTP cache: do not load resources from cache that must be revalidated [QTBUG-18983]
 - HTTP cache: change file organization (MR-2505)
 - SOCKS5: write errors are propagated to the outer socket [QTBUG-18713]

 QtOpenGL
 --------
 - Removed dependency of OpenGL Utility Library (GLU)
 - Added QGLFunctions, which provides cross-platform access to the
   OpenGL/ES 2.0 API.
 - Including <QtOpenGL> will not work in combination with GLEW, as
   QGLFunctions will undefine GLEW's defines.
 - Optimize behavior of QGLTextureCache

QtScript
--------
 - Deprecated qScriptValueFromQMetaObject, qScriptValueToValue, qScriptValueFromValue

QtSql
-----

 - Update sqlite to 3.7.7.1
****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------
 - Now takes font hinting settings from GConf by default if running in
   GNOME desktop.
 - Various fixes to FontConfig font matching code to make it consistent
   with other X11 programs. [QTBUG-2148, QTBUG-19947, QTBUG-14269]
 - Added experimental support for armCC

Qt for Windows
--------------
 - DirectWrite experimental text shaping engine is added with subpixel
   positioning support. [QTBUG-12678]

Qt for Mac OS X
---------------
 - raster graphics system is now made as the default paint engine for
   Mac OS X. [QTBUG-12615]
 - HarfBuzz can now be used as an optional text layout engine on Mac OS X.
   [QTBUG-17728]

Qt for Embedded Linux
---------------------